[gd_scene load_steps=9 format=3 uid="uid://dnb5xwc5267fr"]

[ext_resource type="Texture2D" uid="uid://c1v25v3ajdpsq" path="res://Scenes/UI/Dialogue/Gambles/gamble_background_percentage.png" id="1_t0ngk"]
[ext_resource type="Theme" uid="uid://7x0dtol1wfud" path="res://Themes/RegularTheme.tres" id="2_t0ngk"]
[ext_resource type="Texture2D" uid="uid://c76mkvxo4ibom" path="res://Scenes/UI/Dialogue/Gambles/gamble_text_bg_normal.png" id="3_2d4bk"]
[ext_resource type="Texture2D" uid="uid://naceb3j358mj" path="res://Scenes/UI/Dialogue/Gambles/gamble_text_bg_pressed.png" id="3_tagai"]
[ext_resource type="Script" uid="uid://ckf4dysmicdaf" path="res://Scenes/UI/Dialogue/Gambles/gamble_text.gd" id="4_7ay01"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t0ngk"]
content_margin_left = 28.0
content_margin_top = 8.0
content_margin_right = 20.0
content_margin_bottom = 8.0
texture = ExtResource("3_2d4bk")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2d4bk"]
content_margin_left = 28.0
content_margin_top = 8.0
content_margin_right = 20.0
content_margin_bottom = 8.0
texture = ExtResource("3_tagai")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ay01"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="GambleText" type="Control"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 3
anchors_preset = 0
offset_right = 100.0
size_flags_horizontal = 3
theme = ExtResource("2_t0ngk")
script = ExtResource("4_7ay01")

[node name="OptionText" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 30.0
offset_top = 15.0
offset_right = 162.0
offset_bottom = 51.0
theme = ExtResource("2_t0ngk")
theme_override_colors/font_color = Color(0.95686275, 0.8627451, 0.6039216, 1)
theme_override_colors/font_focus_color = Color(0.95686275, 0.8627451, 0.6039216, 1)
theme_override_colors/font_pressed_color = Color(0.95686275, 0.8627451, 0.6039216, 1)
theme_override_colors/font_hover_color = Color(0.95686275, 0.8627451, 0.6039216, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxTexture_t0ngk")
theme_override_styles/pressed = SubResource("StyleBoxTexture_2d4bk")
theme_override_styles/hover = SubResource("StyleBoxTexture_t0ngk")
theme_override_styles/focus = SubResource("StyleBoxFlat_7ay01")
text = "dsadsadsa"
alignment = 0

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
offset_right = 60.0
offset_bottom = 59.0
mouse_filter = 2
texture = ExtResource("1_t0ngk")

[node name="Percentage" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 8.0
offset_top = 16.0
offset_right = 53.0
offset_bottom = 48.0
theme = ExtResource("2_t0ngk")
theme_override_colors/font_color = Color(0.95686275, 0.8627451, 0.6039216, 1)
theme_override_font_sizes/font_size = 14
text = "99%"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="OptionText" to="." method="_on_option_text_pressed"]
